<resources>
    <string name="app_name">Calculator_Kotlin</string>
    <string name="buttonZero">0</string>
    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>
    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>
    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>
    <string name="buttonComa">,</string>
    <string name="buttonClear">CLEAR</string>
    <string name="buttonEqual">=</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSub">-</string>
    <string name="buttonMul">x</string>
    <string name="buttonDiv">/</string>
</resources>