<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.3"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonZero"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonZero"
        app:layout_constraintBottom_toTopOf="@+id/gh1"
        app:layout_constraintEnd_toStartOf="@+id/gv3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gh2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonComa"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonComa"
        app:layout_constraintBottom_toTopOf="@+id/gh1"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintStart_toStartOf="@+id/gv3"
        app:layout_constraintTop_toTopOf="@+id/gh2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEqual"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonEqual"
        app:layout_constraintBottom_toTopOf="@+id/gh1"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintStart_toStartOf="@+id/gv4"
        app:layout_constraintTop_toTopOf="@+id/gh2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdd"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonAdd"
        app:layout_constraintBottom_toTopOf="@+id/gh2"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintStart_toStartOf="@+id/gv4"
        app:layout_constraintTop_toTopOf="@+id/gh3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOne"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonOne"
        app:layout_constraintBottom_toTopOf="@+id/gh2"
        app:layout_constraintEnd_toStartOf="@+id/gv2"
        app:layout_constraintStart_toStartOf="@+id/gv1"
        app:layout_constraintTop_toTopOf="@+id/gh3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonTwo"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonTwo"
        app:layout_constraintBottom_toTopOf="@+id/gh2"
        app:layout_constraintEnd_toStartOf="@+id/gv3"
        app:layout_constraintStart_toStartOf="@+id/gv2"
        app:layout_constraintTop_toTopOf="@+id/gh3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonThree"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonThree"
        app:layout_constraintBottom_toTopOf="@+id/gh2"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintStart_toStartOf="@+id/gv3"
        app:layout_constraintTop_toTopOf="@+id/gh3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFour"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonFour"
        app:layout_constraintBottom_toTopOf="@+id/gh3"
        app:layout_constraintEnd_toStartOf="@+id/gv2"
        app:layout_constraintStart_toStartOf="@+id/gv1"
        app:layout_constraintTop_toTopOf="@+id/gh4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonFive"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonFive"
        app:layout_constraintBottom_toTopOf="@+id/gh3"
        app:layout_constraintEnd_toStartOf="@+id/gv3"
        app:layout_constraintStart_toStartOf="@+id/gv2"
        app:layout_constraintTop_toTopOf="@+id/gh4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSix"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSix"
        app:layout_constraintBottom_toTopOf="@+id/gh3"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintStart_toStartOf="@+id/gv3"
        app:layout_constraintTop_toTopOf="@+id/gh4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSub"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSub"
        app:layout_constraintBottom_toTopOf="@+id/gh3"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintStart_toStartOf="@+id/gv4"
        app:layout_constraintTop_toTopOf="@+id/gh4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSeven"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonSeven"
        app:layout_constraintBottom_toTopOf="@+id/gh4"
        app:layout_constraintEnd_toStartOf="@+id/gv2"
        app:layout_constraintStart_toStartOf="@+id/gv1"
        app:layout_constraintTop_toTopOf="@+id/gh5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEight"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonEight"
        app:layout_constraintBottom_toTopOf="@+id/gh4"
        app:layout_constraintEnd_toStartOf="@+id/gv3"
        app:layout_constraintStart_toStartOf="@+id/gv2"
        app:layout_constraintTop_toTopOf="@+id/gh5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonNine"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonNine"
        app:layout_constraintBottom_toTopOf="@+id/gh4"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintStart_toStartOf="@+id/gv3"
        app:layout_constraintTop_toTopOf="@+id/gh5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonMul"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonMul"
        app:layout_constraintBottom_toTopOf="@+id/gh4"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintStart_toStartOf="@+id/gv4"
        app:layout_constraintTop_toTopOf="@+id/gh5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClear"
        style="@style/NumberButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonClear"
        app:layout_constraintBottom_toTopOf="@+id/gh5"
        app:layout_constraintEnd_toStartOf="@+id/gv4"
        app:layout_constraintStart_toStartOf="@+id/gv1"
        app:layout_constraintTop_toTopOf="@+id/gh6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDiv"
        style="@style/SymbolButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/buttonDiv"
        app:layout_constraintBottom_toTopOf="@+id/gh5"
        app:layout_constraintEnd_toStartOf="@+id/gv5"
        app:layout_constraintStart_toStartOf="@+id/gv4"
        app:layout_constraintTop_toTopOf="@+id/gh6" />


    <View
        android:id="@+id/separator"
        style="@style/Separator"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gh1"
        app:layout_constraintEnd_toEndOf="@id/gv4"
        app:layout_constraintStart_toStartOf="@id/gv4"
        app:layout_constraintTop_toTopOf="@id/gh6" />

    <TextView
        android:id="@+id/screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buttonZero"
        android:gravity="center|end"
        style="@style/ScreenNumber"
        app:layout_constraintBottom_toTopOf="@id/gh6"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh7" />

</androidx.constraintlayout.widget.ConstraintLayout>